--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.10",
+        "@vitejs/plugin-vue": "^5.0.3",
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vue": "^3.4.15"
     }
 }
