--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
+        "typescript": "^5.3.3",
         "vite": "^5.0.0",
         "vue": "^3.4.15"
     }
