--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "typescript": "^5.3.3",
         "vite": "^5.0.0",
         "vue": "^3.4.15"
+    },
+    "dependencies": {
+        "@heroicons/vue": "^2.1.1"
     }
 }
