--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^5.0.3",
         "autoprefixer": "^10.4.17",
@@ -18,6 +19,7 @@
         "vue": "^3.4.15"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.18",
         "@heroicons/vue": "^2.1.1"
     }
 }
